--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,11 @@ body {
     height: 200px;
 }
 
+.container {
+    max-width: 38rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5rem;
+}
